force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/malive__MALiveDailySummaryConfig__c.object-meta.xml
<CustomObject>
    <label>MA Live Daily Summary Configuration</label>
    <nameField>
        <label>Daily Summary Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Live Daily Summary Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>