force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__Active__c.field-meta.xml
<CustomField>
    <fullName>malive__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>