force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__ActiveDevicesCount__c.field-meta.xml
<CustomField>
    <fullName>malive__ActiveDevicesCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the total number of active devices associated with the DeviceLayer on this Summary. This total is calculated daily during the Summaries batch run. This can also be updated by re-running the Summary batch manually.</description>
    <inlineHelpText>Total number of active devices associated with the DeviceLayer on this Summary</inlineHelpText>
    <label>Active Devices Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>