force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__AnyAmtOfTime__c.field-meta.xml
<CustomField>
    <fullName>malive__AnyAmtOfTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Amt Of Time</label>
    <type>Checkbox</type>
</CustomField>