force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__CreateDeviceBatteryRecord__c.field-meta.xml
<CustomField>
    <fullName>malive__CreateDeviceBatteryRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Device Battery Record</label>
    <type>Checkbox</type>
</CustomField>