force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__CreateHardAccelRecord__c.field-meta.xml
<CustomField>
    <fullName>malive__CreateHardAccelRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Hard Accel Record</label>
    <type>Checkbox</type>
</CustomField>