force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__CreateHardBrakeRecord__c.field-meta.xml
<CustomField>
    <fullName>malive__CreateHardBrakeRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Hard Brake Record</label>
    <type>Checkbox</type>
</CustomField>