force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__CreateSpeedRecord__c.field-meta.xml
<CustomField>
    <fullName>malive__CreateSpeedRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Speed Record</label>
    <type>Checkbox</type>
</CustomField>