force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__CreateSpeedThresholdRecord__c.field-meta.xml
<CustomField>
    <fullName>malive__CreateSpeedThresholdRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Speed Threshold Record</label>
    <type>Checkbox</type>
</CustomField>