force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__CreateStateMileageRecord__c.field-meta.xml
<CustomField>
    <fullName>malive__CreateStateMileageRecord__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create State Mileage Record</label>
    <type>Checkbox</type>
</CustomField>