force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__CreateStopRecord__c.field-meta.xml
<CustomField>
    <fullName>malive__CreateStopRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Stop Record</label>
    <type>Checkbox</type>
</CustomField>