force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__Description__c.field-meta.xml
<CustomField>
    <fullName>malive__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>