force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__DeviceLayer__c.field-meta.xml
<CustomField>
    <fullName>malive__DeviceLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device Layer</label>
    <referenceTo>sma__MASavedQry__c</referenceTo>
    <relationshipLabel>Daily Summary Configurations</relationshipLabel>
    <relationshipName>MALiveDailySummaryConfigs</relationshipName>
    <type>Lookup</type>
</CustomField>