force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__DistanceValue__c.field-meta.xml
<CustomField>
    <fullName>malive__DistanceValue__c</fullName>
    <label>Distance Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>