force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__JobId__c.field-meta.xml
<CustomField>
    <fullName>malive__JobId__c</fullName>
    <description>The current job id of the running Summary batch job associated with this config</description>
    <inlineHelpText>The current job id of the running Summary batch job associated with this config</inlineHelpText>
    <label>Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>