force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__LastBatchEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__LastBatchEndDateTime__c</fullName>
    <label>Last Batch End Date/Time</label>
    <type>DateTime</type>
</CustomField>