force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__LastBatchStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__LastBatchStartDateTime__c</fullName>
    <label>Last Batch Start Date/Time</label>
    <type>DateTime</type>
</CustomField>