force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__SpeedingEventActive__c.field-meta.xml
<CustomField>
    <fullName>malive__SpeedingEventActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speeding Event Active</label>
    <type>Checkbox</type>
</CustomField>