force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__SpeedLimitOver__c.field-meta.xml
<CustomField>
    <fullName>malive__SpeedLimitOver__c</fullName>
    <label>Speed Limit Over</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>