force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__SpeedLimitUnits__c.field-meta.xml
<CustomField>
    <fullName>malive__SpeedLimitUnits__c</fullName>
    <label>Speed Limit Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mph</fullName>
                <default>true</default>
                <label>mph</label>
            </value>
            <value>
                <fullName>kph</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>