force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__SpeedThresholdEventActive__c.field-meta.xml
<CustomField>
    <fullName>malive__SpeedThresholdEventActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speed Threshold Event Active</label>
    <type>Checkbox</type>
</CustomField>