force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__SpeedThresholdUnits__c.field-meta.xml
<CustomField>
    <fullName>malive__SpeedThresholdUnits__c</fullName>
    <label>Speed Threshold Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mph</fullName>
                <default>true</default>
                <label>Mph</label>
            </value>
            <value>
                <fullName>kph</fullName>
                <label>Kph</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>