force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__SpeedValue__c.field-meta.xml
<CustomField>
    <fullName>malive__SpeedValue__c</fullName>
    <label>Speed Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>