force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__StopDefinition__c.field-meta.xml
<CustomField>
    <fullName>malive__StopDefinition__c</fullName>
    <label>Stop Definition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not move more than</fullName>
                <default>true</default>
                <label>Do not move more than</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>