force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__TimeValue__c.field-meta.xml
<CustomField>
    <fullName>malive__TimeValue__c</fullName>
    <label>Time Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>