force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__TruckPostedSpeed__c.field-meta.xml
<CustomField>
    <fullName>malive__TruckPostedSpeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Truck Posted Speed Limit</label>
    <type>Checkbox</type>
</CustomField>