force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/fields/malive__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>malive__UnitOfMeasure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>imperial</fullName>
                <default>true</default>
                <label>Imperial</label>
            </value>
            <value>
                <fullName>metric</fullName>
                <label>Metric</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>