force-app/main/default/objects/malive__MALiveDailySummaryConfig__c/listViews/malive__All_Summaries.listView-meta.xml
<ListView>
    <fullName>malive__All_Summaries</fullName>
    <columns>NAME</columns>
    <columns>malive__ActiveDevicesCount__c</columns>
    <columns>malive__DeviceLayer__c</columns>
    <columns>malive__SpeedingEventActive__c</columns>
    <columns>malive__SpeedLimitOver__c</columns>
    <columns>malive__SpeedLimitTime__c</columns>
    <columns>malive__StopEventActive__c</columns>
    <columns>malive__StopDefinition__c</columns>
    <columns>malive__DistanceValue__c</columns>
    <columns>malive__SpeedValue__c</columns>
    <columns>malive__TimeValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Summaries</label>
</ListView>